--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: ^4.7.2
+  provider: ^6.0.5
+  firebase_core: ^2.15.0
 
 dev_dependencies:
   flutter_test:
