--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   firebase_auth: ^4.7.2
   provider: ^6.0.5
   firebase_core: ^2.15.0
+  supabase: ^1.9.9
+  cloud_firestore: ^4.8.4
 
 dev_dependencies:
   flutter_test:
