--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^2.15.0
   supabase: ^1.9.9
   cloud_firestore: ^4.8.4
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
