--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   supabase: ^1.9.9
   cloud_firestore: ^4.8.4
   cached_network_image: ^3.1.0
+  google_maps_flutter: ^2.4.0
+  latlong2: ^0.8.0
+  location: ^5.0.2+1
+
 
 dev_dependencies:
   flutter_test:
