--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   google_maps_flutter: ^2.4.0
   latlong2: ^0.8.0
   location: ^5.0.2+1
-
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
