--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   latlong2: ^0.8.0
   location: ^5.0.2+1
   url_launcher: ^6.1.12
+  image_picker: ^1.0.2
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
