--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   url_launcher: ^6.1.12
   image_picker: ^1.0.2
   path_provider: ^2.1.0
+  photo_manager: ^2.7.1
 
 dev_dependencies:
   flutter_test:
