--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^1.0.2
   path_provider: ^2.1.0
   photo_manager: ^2.7.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
