--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: ^2.1.0
   photo_manager: ^2.7.1
   photo_view: ^0.14.0
+  crypto: ^3.0.1
 
 dev_dependencies:
   flutter_test:
