--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   photo_manager: ^2.7.1
   photo_view: ^0.14.0
   crypto: ^3.0.1
+  exif: ^3.1.4
 
 dev_dependencies:
   flutter_test:
