--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   photo_view: ^0.14.0
   crypto: ^3.0.1
   exif: ^3.1.4
+  flutter_google_maps_webservices: ^1.1.1
 
 dev_dependencies:
   flutter_test:
