--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   crypto: ^3.0.1
   exif: ^3.1.4
   flutter_google_maps_webservices: ^1.1.1
+  firebase_storage: ^11.2.6
 
 dev_dependencies:
   flutter_test:
