--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   exif: ^3.1.4
   flutter_google_maps_webservices: ^1.1.1
   firebase_storage: ^11.2.6
+  video_player: ^2.7.1
+  video_thumbnail: ^0.5.3
 
 dev_dependencies:
   flutter_test:
