--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   exif: ^3.1.4
   flutter_google_maps_webservices: ^1.1.1
   firebase_storage: ^11.2.6
-  # video_player: ^2.7.1
+  video_player: ^2.7.1
   video_thumbnail: ^0.5.3
   flutter_video_view: ^2.0.2+1
 
