--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   firebase_storage: ^11.2.6
   video_player: ^2.7.1
   video_thumbnail: ^0.5.3
-  # flutter_video_view: ^2.0.2+1
+  visibility_detector: ^0.4.0+2
+  preload_page_view: ^0.2.0
 
 dev_dependencies:
   flutter_test:
