--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   preload_page_view: ^0.2.0
   liquid_pull_to_refresh: ^3.0.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
