--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: goodie
 description: A new Flutter project.
-publish_to: "none"
+publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ">=3.0.1 <4.0.0"
+  sdk: '>=3.0.1 <4.0.0'
 
 dependencies:
   flutter:
@@ -33,6 +33,7 @@ dependencies:
   preload_page_view: ^0.2.0
   liquid_pull_to_refresh: ^3.0.1
   intl: ^0.18.1
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
