--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   intl: ^0.18.1
   otp_text_field: ^1.1.3
+  phone_text_field: ^0.0.6
 
 dev_dependencies:
   flutter_test:
