--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   intl: ^0.18.1
   otp_text_field: ^1.1.3
   phone_text_field: ^0.0.6
+  ffmpeg_kit_flutter: ^6.0.3
 
 dev_dependencies:
   flutter_test:
